--- a/index.html
+++ b/index.html
@@ -1,28 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Malla Curricular</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Malla Curricular Interactiva</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Malla Curricular de Licenciatura</h1>
-
-  
-
-  <div class="semestre">
-    <h2>Semestre 1</h2>
-    <div class="materia" onclick="toggleEstado(this)">Fundamentos del Arte</div>
-    <div class="materia" onclick="toggleEstado(this)">Historia del Arte I</div>
-  </div>
-
-  <div class="semestre">
-    <h2>Semestre 2</h2>
-    <div class="materia" onclick="toggleEstado(this)">Estética</div>
-    <div class="materia" onclick="toggleEstado(this)">Dibujo Técnico</div>
-  </div>
-
+  <h1>Malla Curricular Interactiva - Arquitectura</h1>
+  <div id="malla"></div>
   <script src="script.js"></script>
 </body>
 </html>
